Created attachment 50698 [details] protected tables where tab inserts new row When tabbing through a table within a protected section you get a new row when you reach the end. The same thing happens if the last cell is protected as well. In my opinion the expected behavior would be that the cursor steps out of the table if protected or possibly stops at the end of the table. I attached a file to demonstrate the problem. To reproduce from scratch Scenario 1 create a section (Insert > Section...) use default name etc Insert put a table inside the section protect the section (Format > Sections) check Protected under Write protection OK put the cursor in the table and press tab until you reach the end of the table press once more and a new row gets inserted. Scenario 2 insert a table protect the last cell by right-clicking in the cell choose Cell > Protect you can't write anything in the cell but a new row gets inserted if i press tab.
[This is an automated message.] This bug was filed before the changes to Bugzilla on 2011-10-16. Thus it started right out as NEW without ever being explicitly confirmed. The bug is changed to state NEEDINFO for this reason. To move this bug from NEEDINFO back to NEW please check if the bug still persists with the 3.5.0 beta1 or beta2 prereleases. Details on how to test the 3.5.0 beta1 can be found at: http://wiki.documentfoundation.org/QA/BugHunting_Session_3.5.0.-1 more detail on this bulk operation: http://nabble.documentfoundation.org/RFC-Operation-Spamzilla-tp3607474p3607474.html
Dear bug submitter! Due to the fact, that there are a lot of NEEDINFO bugs with no answer within the last six months, we close all of these bugs. To keep this message short, more infos are available @ https://wiki.documentfoundation.org/QA/NeedinfoClosure#Statement Thanks for understanding and hopefully updating your bug, so that everything is prepared for developers to fix your problem. Yours! Florian
Sorry I the message about NEED INFO got lost in my mail box. This issue is at least present in LibreOffice 3.5.5.3 (Win 64-bit Swedish). From a build of master on Ubuntu (pulled and made yesterday) the issue is still present.
Thanks for your import. Marked it as enchhancement...
This is a bug, not an enhancement. Changing content in protected sections should not be possible.
Oliver Specht committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=1fbd073828ef52f5206aed4643226bae9fb85f4f tdf#40494: adding rows to table in protected sections not allowed It will be available in 5.2.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Not present in: Version: 5.3.0.0.alpha0+ Build ID: a8bd44573b75d1399257d6f5d052611439607189 CPU Threads: 2; Description: openSUSE Leap 42.1 (x86_64); UI Render: default; TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-06-13_23:46:49 Locale: it-IT (it_IT.UTF-8) I changed the bug state to Resolve.