tdf#40494: adding rows to table in protected sections not allowed

Travelling with tab key in tables usually adds a new row when the
last cell is reached. This should not be done in protected sections.

Change-Id: I554c85c517157e394c691b43c462f5abf45e8197
Reviewed-on: https://gerrit.libreoffice.org/21427
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Oliver Specht <oliver.specht@cib.de>